[package]
name = "reth-etl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tempfile.workspace = true
reth-db-api.workspace = true
rayon.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true
