[package]
name = "reth-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
reth-provider.workspace = true
reth-beacon-consensus.workspace = true
reth-network = { workspace = true, features = ["serde"] }
reth-network-api.workspace = true
reth-stages.workspace = true
reth-prune.workspace = true
reth-static-file.workspace = true
reth-interfaces = { workspace = true, features = ["clap"] }
reth-db = { workspace = true, features = ["mdbx"] }
reth-primitives.workspace = true

# async
tokio.workspace = true

# async
futures.workspace = true

tracing.workspace = true

#misc
pin-project.workspace = true
humantime = "2.1.0"
